- bug fix mis align form on site option

--- a/css/dewslandslide/data_analysis/site_analysis.css
+++ b/css/dewslandslide/data_analysis/site_analysis.css
@@ -467,6 +467,7 @@ h4{
     .panel-body {
       padding-left: 0px;
       padding-right: 0px;
+      display: table-caption;
 
     }
 }
